--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "start": "webpack-dev-server --open "
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.2.3",
     "history": "^4.6.3",
     "react": "^16.0.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
